--- a/css/styles.css
+++ b/css/styles.css
@@ -5,19 +5,67 @@
 
 body {
   background: #fcc;
-} 
+  margin: 0;
+}
 
+header {
+  background: #ccc;
+  padding: 0.25em;
+  text-align: center;
+}
 
+nav {
+  display: none;
+  justify-content: center;
+  flex-direction: column;
+  background: #333;
+}
+nav a {
+  padding: 1.25em 1.5em;
+  color: #ccc;
+  background: #555;
+  text-decoration: none;
+  transition: all 1.5s;
+}
+nav a:hover {
+  color: #dfd;
+  background: #797;
+}
+
+main {
+  padding: 0 10px;
+}
+
+.menu {
+  background-color: black;
+  color: white;
+  line-height: 2em;
+}
+
+.menu:hover + nav, nav:hover {
+  display: flex;
+}
 
 /* TABLET STYLES */
 
 @media screen and (min-width: 500px) {
 
   /* applies to screens wider than 499px */
-  
+
+
+
   body {
     background: #cfc;
-  } 
+  }
+
+  nav {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .menu {
+    display: none;
+  }
 }
 
 
@@ -30,5 +78,5 @@ body {
 
   body {
     background: #ccf;
-  } 
+  }
 }
